--- a/resumen.tex
+++ b/resumen.tex
@@ -1,8 +1,8 @@
 \section*{Resumen}
 
-En la actualidad las redes informáticas están presentes en las operaciones diarias de prácticamente cualquier empresa. Debido a la demanda de contenido multimedia, las telecomunicaciones y el surgimiento del \textit{BigData}, el tamaño y el volumen de datos que manejan estas empresas proveedoras de servicios incrementa año tras año. Por esto, las herramientas que facilitan la tarea de administración y diagnóstico de redes son de gran utilidad para ofrecer un servicios de mejor calidad, y aprovechar la utilización de recursos existentes.
+En la actualidad las redes informáticas están presentes en nuestro día a día, así como también en las operaciones diarias de prácticamente cualquier organización. Debido a la demanda de contenido multimedia, la telefonía celular y el surgimiento del \textit{BigData}, el tamaño y el volumen de datos que manejan las empresas proveedoras de este tipo de servicios incrementa año tras año. Por esto, las herramientas que facilitan la tarea de administración y diagnóstico de redes son de gran utilidad para ofrecer un servicios de mejor calidad, y aprovechar la utilización de recursos existentes.
 El documento describe un proyecto para el desarrollo de un sistema de monitoreo en tiempo real del tráfico de red, que puede ser puesto en funcionamiento en la infraestructura existente de cualquier organización con un bajo impacto y a un bajo costo.
 
-\paragraph{Palabras claves} \textit{tiempo real}, \textit{redes informáticas}, \textit{Apache Storm}, \textit{monitoreo}, \textit{visualización}
+\paragraph{Palabras claves} \textit{tiempo real}, \textit{redes informáticas}, \textit{Data Streaming}, \textit{monitoreo}, \textit{visualización}
 
 \newpage
