--- a/justificacion.tex
+++ b/justificacion.tex
@@ -1,12 +1,12 @@
 \section*{Justificación}
-Las redes informáticas son esenciales para que las empresas o institución pública puedan realizar sus tareas diarias. A medida que estas entidades crecen también lo hace el volumen de datos que generan, demandando así una infraestructura de red con mayor tamaño. Debido a esto, mantener una buena performance en el funcionamiento general de un sistema que se encuentra constantemente en crecimiento se convierte en una tarea desafiante.
+Las redes informáticas son esenciales para que las empresas o instituciones públicas puedan realizar sus tareas diarias. A medida que estas entidades crecen también lo hace el volumen de datos que generan, demandando así una infraestructura de red con mayor tamaño. Debido a esto, mantener una buena performance en el funcionamiento general de un sistema que se encuentra constantemente en crecimiento se convierte en una tarea desafiante.
 
 Algunas de las herramientas disponibles para monitoreo de redes brindan reportes basados en estadísticas. La empresa Cisco\textsuperscript{\textregistered} introduce una característica en algunos modelos de routers y switches llamada NetFlow, la cual permite recolectar información sobre el tráfico de red que atraviesa las distintas interfaces del dispositivo. Sin embargo, estar limitado exclusivamente a modelos particulares de routers y switches significa una desventaja pues en algunas ocasiones no se dispone del hardware mencionado, lo que implica una inversión en infraestructura considerable. Otros fabricantes introducen características similares a NetFlow, pero con nombres diferentes: Traffic Flow de MikroTik, NetStream de HP, entre otros.
 Otra alternativa para monitorear el tráfico que pasa a través de una interfaz de red es el analizador de paquetes \textit{tcpdump} (disponible en sistemas GNU/Linux), el cual permite observar una descripción en texto plano del contenido de los paquetes que atraviesan la interfaz.
 
-Disponer de la información más actualizada posible de los eventos que han ocurrido en la red facilita la tarea de administrar redes informáticas. Es por esto que el monitoreo en tiempo real es un herramienta de gran utilidad pues permite contar con información importante, al instante. El proceso de toma de decisiones a la hora de invertir en infraestructura puede realizarse de forma adecuada si se incluye la información que puede extraerse observando la utilización de la infraestructura actual. Por ejemplo, una empresa podría decidir si invertir en una conexión a Internet de mayor velocidad o limitar el ancho de banda disponible para ciertos servicios que hacen uso intensivo de las redes. El monitoreo y la visualización en tiempo real puede hacer también que el proceso de detección de problemas en una red sea rápido y sencillo.
+Disponer de la información más actualizada posible de los eventos que han ocurrido en la red facilita la tarea de administrar y diagnosticar fallas. Es por esto que el monitoreo en tiempo real es un herramienta de gran utilidad pues permite contar con información de una serie de métricas muy descriptivas al instante. El proceso de toma de decisiones a la hora de invertir en infraestructura puede realizarse de forma adecuada si se incluye la información que puede extraerse observando la utilización de la infraestructura actual. Por ejemplo, una empresa podría decidir si invertir en una conexión a Internet de mayor velocidad o limitar el ancho de banda disponible para ciertos servicios que hacen uso intensivo de las redes. El monitoreo y la visualización en tiempo real puede hacer también que el proceso de detección de problemas en una red sea rápido y sencillo.
 
-Se propone entonces diseñar un sistema capaz de registrar los eventos TCP ocurridos y mostrar información acerca del tráfico de red que está siendo transmitido por una red. El mismo utilizará técnicas llamadas \textit{Real-Time Stream Processing} para analizar la salida de texto plano del analizador de paquetes \textit{tcpdump} y producir en tiempo real informes acerca de los parámetros de performance más importantes\footnote{IP Performance Metrics Working Group https://datatracker.ietf.org/wg/ippm/documents/ (IPPM)}
+Se propone entonces diseñar un sistema capaz de registrar los eventos ocurridos en capa de transporte y mostrar información acerca del tráfico de red que está siendo transmitido por una red. El mismo desarrollará utilizando técnicas llamadas \textit{Real-Time Stream Processing} para analizar la salida de texto plano del analizador de paquetes \textit{tcpdump} y producir en tiempo real informes acerca de los parámetros de performance más importantes\footnote{IP Performance Metrics Working Group https://datatracker.ietf.org/wg/ippm/documents/ (IPPM)}
 . El uso de estas técnicas permite diseñar un sistema escalable el cual pueda adaptarse a redes que están en crecimiento constante.
 
 Sin duda alguna, la cantidad de dispositivos conectados a Internet crece día a día y con ellos lo hace la demanda de la infraestructura de red necesaria para brindar un servicio de calidad. Contar con información del uso de las redes es fundamental para hacer estimaciones para inversiones a futuro, y permite determinar si los recursos disponibles están siendo utilizados de manera eficiente.
@@ -43,7 +43,7 @@ Diseñar un sistema que permita monitorear en tiempo real parámetros de perform
 		\item Tráfico entrante y saliente por proceso
 	\end{itemize}
 	\item El sistema ofrecerá estadísticas generales de uso de la red.
-	\item El sistema almacenará información de las conexiones establecidas y terminadas que ocurrieron en la red.
+	\item El sistema almacenará información de las conexiones establecidas.
 	\item El sistema no identificará patrones o generará alarmas.
 \end{itemize}
 
