--- a/justificacion.tex
+++ b/justificacion.tex
@@ -42,8 +42,7 @@ Diseñar un sistema que permita monitorear en tiempo real parámetros de perform
 		\item Tráfico entrante y saliente por host
 		\item Tráfico entrante y saliente por proceso
 	\end{itemize}
-	\item El sistema ofrecerá estadísticas generales de uso de la red.
-	\item El sistema almacenará información de las conexiones establecidas.
+	\item El sistema almacenará información de las conexiones establecidas. Lo hará en archivos de texto plano y en formato semi-estructurado.
 	\item El sistema no identificará patrones o generará alarmas.
 \end{itemize}
 
