--- a/justificacion.tex
+++ b/justificacion.tex
@@ -21,7 +21,7 @@ Diseñar un sistema que permita monitorear en tiempo real parámetros de perform
 
 \item Identificar un conjunto de tecnologías y herramientas adecuadas para el diseño del sistema.
 \item Diseñar un sistema de monitoreo de redes que funcione en \textit{commodity hardware}.
-\item Construir una herramienta de software que permita visualizar cómo varían los parámetros de performance de la red (ver Alcances).
+\item Construir una herramienta de software que registre los eventos ocurridos en la red (capa de transporte).
 \item Elaborar un documento que describa la arquitectura del sistema.
 \end{itemize}
 
