Justificación del nuevo anteproyecto

--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -12,7 +12,7 @@
 
 \bibliography{anteproyecto}
 
-\SetWatermarkText{}
+\SetWatermarkText{BORRADOR}
 \SetWatermarkScale{5}
 \SetWatermarkLightness{0.95}
 
@@ -29,12 +29,12 @@
 	\vspace{1cm}
 	{\scshape\Large Proyecto Final de Carrera\par}
 	\vspace{1.5cm}
-	{\huge\bfseries Diseño de un sistema de monitoreo en tiempo real de tráfico de red en capa de transporte.\par}
+	{\huge\bfseries Diseño de un sistema de detección de anomalías en redes de computadoras.\par}
 	\vspace{2cm}
 	{\Large\itshape Pineda Leandro\par}
 	\vfill
 	dirigido por\par
-	Ing. Gabriel \textsc{Filippa}
+	
 
 	\vfill
 	
@@ -59,7 +59,6 @@
  
 \nocite{*}
 \printbibliography
-
 \end{document}
 
 
