--- a/justificacion.tex
+++ b/justificacion.tex
@@ -1,17 +1,10 @@
 \section*{Justificación}
-Las redes informáticas son esenciales para que las empresas o instituciones públicas puedan realizar sus tareas diarias. A medida que estas entidades crecen también lo hace el volumen de datos que generan, demandando así una infraestructura de red con mayor tamaño. Debido a esto, mantener una buena performance en el funcionamiento general de un sistema que se encuentra constantemente en crecimiento se convierte en una tarea desafiante.
+La cantidad de servicios que ofrecen organismos públicos y privados a través de Internet aumenta constantemente, y en consecuencia también lo hace la complejidad de los sistemas necesarios para proveerlos. \par
+La integridad de estos sistemas puede verse comprometida fundamentalmente por dos factores: las fallas de los componentes de la infraestructura de red\cite{Gill:2011:UNF:2043164.2018477} que afectan una parte o la totalidad de las funcionalidades del sistema, y los servicios ofrecidos a usuarios externos que pueden ser objeto de numerosos tipos de ataques\cite{Karumanchi:2014:WLS:2554850.2555010}\cite{mutchler15:mobilewebapps}. Hacer frente a estos últimos es de extrema importancia dado que su fin puede ser no solo afectar la calidad de los servicios ofrecidos, sino que también pueden comprometer información sensible de la organización o de los usuarios. Además de ataques externos, los sistemas pueden ser vulnerados por usuarios malintensionados con acceso físico a la red interna de la organización, o por actores inadvertidos\cite{Kraemer2007143}\cite{Kraemer2009509}\cite{Liginlal2009215}\cite{Ahmed12humanerrors}. \par
+El conjunto de herramientas clásicas para implementar políticas de seguridad como firewall, lista de control de acceso, credenciales de usuario, proxy de red entre otros, resultaba adecuado 10 años atras, pero en la actualidad estas herramientas están siendo cada vez menos efectivas en la tarea de bloquear ataques dirigidos y malware avanzados. Esto hace que cada vez sea más común la utilización de otras herramientas que monitorean continuamente eventos en busca de patrones que puedan indicar comportamientos anómalos provocados por ataques o por fallas en los dispositivos de red. Los sistemas de detección/prevención de intrusiones (IDS o IPS por las siglas en inglés \textit{Intrusion Detection/Prevention System}) pueden realizar esta tarea utilizando una de estas técnicas de detección: detección de uso indebido y detección de anomalías\cite{Milenkoski:2015:ECI:2808687.2808691}. En el primer caso, el sistema determina la ocurrencia de ataques comparando la actividad de la red y de los subsistemas que la componen contra un conjunto de patrones de ataques conocidos. En el segundo caso, el sistema utiliza un modelo de comportamiento normal para evaluar la actividad de la red en busca de anomalías, las cuales pueden ser producto de fallas o potenciales ataques. Como alternativa a las soluciones de hardware dedicado o sistemas privativos que ofrecen algunas empresas, la comunidad de software libre desarrolla y mantiene la aplicación Snort\footnote{https://www.snort.org/}, que es un IDS basado en detección de uso indebido. Si bien esta herramienta es efectiva detectando ataques conocidos, es dependiente de la definición de un conjunto efectivo de reglas por parte del administrador (las cuales son difíciles de mantener) y de una base de datos actualizada con los patrones conocidos de ataques o \textit{malware}. Otra desventaja de esta técnica de detección es la imposibilidad de detectar ataques \textit{zero-day\footnote{ataques que expĺotan vulnerabilidades que aún no han sido conocidas o que no están contempladas en al conjunto definido de reglas}}\cite{Milenkoski:2015:ECI:2808687.2808691}. Otra herramienta que suele utilizarse en conjunto con Snort es Bro\footnote{https://www.bro.org/}, que es una plataforma para análisis de tráfico de red. Sin embargo, Bro también se basa en la definición de reglas de monitoreo y utiliza detección de uso indebido. \par
 
-Algunas de las herramientas disponibles para monitoreo de redes brindan reportes basados en estadísticas. La empresa Cisco\textsuperscript{\textregistered} introduce una característica en algunos modelos de routers y switches llamada NetFlow, la cual permite recolectar información sobre el tráfico de red que atraviesa las distintas interfaces del dispositivo. Sin embargo, estar limitado exclusivamente a modelos particulares de routers y switches significa una desventaja pues en algunas ocasiones no se dispone del hardware mencionado, lo que implica una inversión en infraestructura considerable. Otros fabricantes introducen características similares a NetFlow, pero con nombres diferentes: Traffic Flow de MikroTik, NetStream de HP, entre otros.
-Otra alternativa para monitorear el tráfico que pasa a través de una interfaz de red es el analizador de paquetes \textit{tcpdump} (disponible en sistemas GNU/Linux), el cual permite observar una descripción en texto plano del contenido de los paquetes que atraviesan la interfaz.
-
-Disponer de la información más actualizada posible de los eventos que han ocurrido en la red facilita la tarea de administrar y diagnosticar fallas. Es por esto que el monitoreo en tiempo real es un herramienta de gran utilidad pues permite contar con información de una serie de métricas muy descriptivas al instante. El proceso de toma de decisiones a la hora de invertir en infraestructura puede realizarse de forma adecuada si se incluye la información que puede extraerse observando la utilización de la infraestructura actual. Por ejemplo, una empresa podría decidir si invertir en una conexión a Internet de mayor velocidad o limitar el ancho de banda disponible para ciertos servicios que hacen uso intensivo de las redes. El monitoreo y la visualización en tiempo real puede hacer también que el proceso de detección de problemas en una red sea rápido y sencillo.
-
-Se propone entonces diseñar un sistema capaz de registrar los eventos ocurridos en capa de transporte y mostrar información acerca del tráfico de red que está siendo transmitido por una red. El mismo desarrollará utilizando técnicas llamadas \textit{Real-Time Stream Processing} para analizar la salida de texto plano del analizador de paquetes \textit{tcpdump} y producir en tiempo real informes acerca de los parámetros de performance más importantes\footnote{IP Performance Metrics Working Group https://datatracker.ietf.org/wg/ippm/documents/ (IPPM)}
-. El uso de estas técnicas permite diseñar un sistema escalable el cual pueda adaptarse a redes que están en crecimiento constante.
-
-Sin duda alguna, la cantidad de dispositivos conectados a Internet crece día a día y con ellos lo hace la demanda de la infraestructura de red necesaria para brindar un servicio de calidad. Contar con información del uso de las redes es fundamental para hacer estimaciones para inversiones a futuro, y permite determinar si los recursos disponibles están siendo utilizados de manera eficiente.
-
-Finalmente, contar con esta información es una gran ayuda para mejorar la seguridad de las redes. Muchos de los ataques a redes informáticas son realizados por usuarios fuera de la red que no tienen acceso físico a la misma, pero muchos de los ataques más peligrosos son llevados a cabo por usuarios internos. Tener este tipo de información sobre el tráfico de la red puede ser una herramienta de enorme valor para identificar estos sucesos.
+Con el fin de disponer de otra herramienta para la identificación de comportamientos sospechosos, el objetivo de este proyecto es el de diseñar un software que modele de forma automática el comportamiento normal de la red utilizando las técnicas del estado del arte, para identificar y alertar comportamiento anómalo en la red de datos de una organización. Así, el modelo de comportamiento normal es calculado automaticamente por el software, brindando la posibilidad de detectar efectivamente cualquier cambio poco usual en los sistemas. Para esto, se hará uso de la información provista por los dispositivos de infraestructura de red como routers y logs de servidores y de los subsistemas que interactuan dentro de la red.
+\newpage
 
 \section*{Objetivos}
 \subsection*{Generales}
